Speed up of indexing process and processing of span-id from logs